partial adjustments of figure sizes
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@305 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/AdditionalDetails.tex
+++ b/doc/tex/AdditionalDetails.tex
@@ -23,8 +23,8 @@ y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2.
 \ee
 
 \begin{figure}[hbpt!]
-	\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zprime_xs_med_100}
-	\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zprime_xs_med_1000}
+	\includegraphics[width=0.99\linewidth]{figures/EW/monoH/zprime_xs_med_100}\\
+	\includegraphics[width=0.99\linewidth]{figures/EW/monoH/zprime_xs_med_1000}
 	\caption{Cross section of the $pp \rightarrow H\chiDM\bar{\chiDM}$ process as a function of 
 		$g_{h \Zprime \Zprime}$ for $m_{\Zprime} = 100$~\gev (left) 
 		and $m_{\Zprime} = 1$~\tev (right). The fit functions are shown in the text. 
