--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -155,18 +155,18 @@ Figure~\ref{fig:METSimpMonoHiggs} (b)  shows the \MET distribution
 for models with low pseudoscalar mediator masses ($m_{Z_B'} = 100$~\gev, $m_{\Zprime} = 1$~\tev, $m_{A^0} = 100$~\gev)
 and DM mass of 1~\tev for all models. 
 
-\begin{figure}[hbpt!]
+\begin{figure*}[hbpt!]
 	\centering
 	\subfloat[High mediator mass]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/models_cmp_MET_et_Log} \label{fig:met_cmp_high}
-	}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/models_cmp_MET_et_Log} \label{fig:met_cmp_high}
+	}\\
 	\subfloat[Low mediator mass]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/models_cmp_low_MET_et_Log} \label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/models_cmp_low_MET_et_Log} \label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the missing transverse momentum distributions at generator level in different 
 		simplified models leading to a Higgs+\MET signature. The model parameter settings are detailed in the text.
 		\label{fig:METSimpMonoHiggs}}
-\end{figure}
+\end{figure*}
 
 
 \subsection{\MET+Higgs from a baryonic \Zprime}
@@ -286,23 +286,23 @@ on a smaller set of grid points to be generated.
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}
 	\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp100/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}
 %	\hfill
 %	\subfloat[Leading $b-$jet transverse momentum]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_subleading_b_pt} %\label{fig:met_cmp_high}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp100/truth_subleading_b_pt} %\label{fig:met_cmp_high}
 %	}
 %	\hfill
 %	\subfloat[Leading $b-$jet pseudorapidity]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_subleading_b_eta} %\label{fig:met_cmp_low}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp100/truth_subleading_b_eta} %\label{fig:met_cmp_low}
 %	}
 	\hfill
 	\subfloat[Angular distance between the two leading $b-$jets]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the kinematic distributions for the two leading $b-$jets (from the Higgs decay) in the vector \Zprime simplified model, 
 		when fixing the \Zprime mass to 100~\gev and varying the DM mass. 
@@ -312,23 +312,23 @@ on a smaller set of grid points to be generated.
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}
 	\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}
 %	\hfill
 %	\subfloat[Leading $b-$jet transverse momentum]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_subleading_b_pt} %\label{fig:met_cmp_high}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp1000/truth_subleading_b_pt} %\label{fig:met_cmp_high}
 %	}
 %	\hfill
 %	\subfloat[Leading $b-$jet pseudorapidity]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_subleading_b_eta} %\label{fig:met_cmp_low}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp1000/truth_subleading_b_eta} %\label{fig:met_cmp_low}
 %	}
 	\hfill
 	\subfloat[\text{Angular separation of the two leading $b$-jets}]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp1000/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/zpzp1000/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector \Zprime simplified model, 
 		when fixing the \Zprime mass to 1000~\gev and varying the DM mass. 
@@ -445,23 +445,23 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}
 	\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar100/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}
 %	\hfill
 %	\subfloat[Leading $b-$jet transverse momentum]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar100/truth_subleading_b_pt} %\label{fig:met_cmp_high}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar100/truth_subleading_b_pt} %\label{fig:met_cmp_high}
 %	}
 %	\hfill
 %	\subfloat[Leading $b-$jet pseudorapidity]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar100/truth_subleading_b_eta} %\label{fig:met_cmp_low}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar100/truth_subleading_b_eta} %\label{fig:met_cmp_low}
 %	}
 	\hfill
 	\subfloat[Angular distance between the two leading $b-$jets]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar100/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the scalar simplified model, 
@@ -472,23 +472,23 @@ in the $H \to \bar b b$ decay channel, for two values of the mediator mass and v
 \begin{figure}[hbpt!]
 	\centering
 	\subfloat[Leading $b-$jet transverse momentum]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_pt} %\label{fig:met_cmp_high}
 	}
 	\hfill
 	\subfloat[Leading $b-$jet pseudorapidity]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar1000/truth_leading_b_eta} %\label{fig:met_cmp_low}
 	}
 %	\hfill
 %	\subfloat[Leading $b-$jet transverse momentum]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar1000/truth_subleading_b_pt} %\label{fig:met_cmp_high}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar1000/truth_subleading_b_pt} %\label{fig:met_cmp_high}
 %	}
 %	\hfill
 %	\subfloat[Leading $b-$jet pseudorapidity]{
-%		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar1000/truth_subleading_b_eta} %\label{fig:met_cmp_low}
+%		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar1000/truth_subleading_b_eta} %\label{fig:met_cmp_low}
 %	}
 	\hfill
 	\subfloat[Angular distance between the two leading $b-$jets]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/scalar1000/truth_bb_deltar} %\label{fig:met_cmp_low}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/scalar1000/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the scalar simplified model, 
 		when fixing the new scalar mass to 1000~\gev and varying the DM mass. 
@@ -618,11 +618,11 @@ we recommend to fix $\tan{\beta}$ to unity in the signal generation.
 \begin{figure}[h!]
 \centering
 \subfloat[\MET distribution]{
-	\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_met}
+	\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_met}
 }
 \hfill
 \subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-	\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_dphi12}
+	\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/hxx_zp1000dm10gz01_dphi12}
 }
 \caption{Kinematic distributions of the signal process varying $\tan{\beta}$, in the case of a Higgs boson decaying into two $b$ quarks,
 	after parameterized detector simulation: no kinematic dependency is observed}
@@ -645,11 +645,11 @@ as long as $\mDM<M_{A^0}/2$ so that $A^0$ production is on-shell, as shown in Fi
 \begin{figure}[h!]
 	\centering
 	\subfloat[\MET distribution]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_met}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_met}
 	}
 	\hfill
 	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_dphi12}
+		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/tanb1zp1000gz08_dphi12}
 	}
 	\caption{Kinematic distributions of the signal process varying \mDM: minimal kinematic dependency on \mDM as expected when $A^0$ is produced on-shell. Plots shown for $M_{\Zprime}=1000$~\gev, $M_{A^0}=300$~\gev.}
 	\label{fig:DMH_mdm}
@@ -677,19 +677,19 @@ The kinematic distributions with varying $M_{\Zprime}$ for fixed $M_{A^0}$ are s
  \begin{figure}[h!]
  	\centering
  	\subfloat[\MET distribution]{
- 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_met}
+ 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_met}
  	}
  	\hfill
  	\subfloat[Leading $b-$jet $p_T$  distribution]{
- 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_p0}
+ 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_p0}
  	}
  	\hfill
  	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
- 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_dphi12}
+ 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_dphi12}
  	}
  	\hfill
  	\subfloat[Dijet invariant mass]{
- 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_mbb}
+ 		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mA300mZp_mbb}
  	}
  	
  	\caption{Kinematic distributions of the signal process varying $M_{\Zprime}$, for $\mDM=100$~\gev, $M_{A^0}=300$~\gev.}
@@ -699,19 +699,19 @@ The kinematic distributions with varying $M_{\Zprime}$ for fixed $M_{A^0}$ are s
    \begin{figure}[h!]
    	\centering
    	\subfloat[\MET distribution]{
-   		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_met}
+   		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_met}
    	}
    	\hfill
    	\subfloat[Leading $b-$jet $p_T$ distribution]{
-   		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_p0}
+   		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_p0}
    	}
    	\hfill
    	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-   		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_dphi12}
+   		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_dphi12}
    	}
    	\hfill
    	\subfloat[Dijet invariant mass]{
-   		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_mbb}
+   		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/ZpA0h_tanb1gz08mZp1000mA_mbb}
    	}
    	\caption{Kinematic distributions of the signal process varying $M_{A^0}$, for $\mDM=100$~\gev, $M_{\Zprime}=1000$~\gev.}
    	\label{fig:DMH_ma0}
@@ -730,19 +730,19 @@ namely values of $M_{\Zprime}=600, 800, 1000, 1200, 1400$~\gev.  This signal pro
 \begin{figure}[h!]
   	\centering
   	\subfloat[\MET distribution]{
-  		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_met}
+  		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_met}
   	}
   	\hfill
   	\subfloat[Leading $b-$jet $p_T$ distribution]{
-  		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphimetj0}
+  		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphimetj0}
   	}
   	\hfill
   	\subfloat[$\Delta\phi$ distance between the two $b-$ jets]{
-  		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphi12}
+  		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_dphi12}
   	}
   	\hfill
   	\subfloat[Dijet invariant mass]{
-  		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_mjj}
+  		\includegraphics[width=0.95\linewidth]{figures/EW/monoH/2hdm/Zp_tanb1gz08mA300mZp1000_mjj}
   	}
   	\caption{Kinematic distributions of $\Zprime \to A^0\,h$ exclusive production, $\Zprime \to Zh$ exclusive production and \Zprime inclusive production for $M_{\Zprime}=1000$~\gev and $M_{A^0}=300$~\gev}
   	\label{fig:DMH_zpincl}
