--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -131,8 +131,8 @@ We specifically assume that the vector mediator does not couple to leptons.  If 
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{figures/monojet/width_V.eps}
-\includegraphics[width=0.45\textwidth]{figures/monojet/width_A.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/width_V.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/width_A.eps}
 \caption{Minimal width as a function of mediator mass for vector and axial-vector mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of 10~\gev, 30~\gev, 100~\gev and 300~\gev in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
 \label{fig:monojet_width_V}
 \end{figure}
@@ -158,12 +158,12 @@ No differences in the shape of the \MET distributions are observed between the s
 In the case of the on-shell Dark Matter pair production where $2\mDM\ll\mMed$, the cross sections of the pure vector and pure axial-vector models are similar. With increasing Dark Matter mass towards the $2\mDM=\mMed$ transition and beyond into the off-shell production regime, the relative difference between the cross sections of the two samples is increasing, with the vector samples having larger cross sections. 
 \Todo{This can be understood in the eikonal approximation since the A terms have an additional $v^2$ in front.}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/compareModels_VA_100.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/compareModels_VA_100.eps}
 \caption{Comparison of the pure vector and pure axial-vector couplings. The $\MET$ distribution is shown for the samples generated with $\mMed=100$~\gev and different Dark Matter masses. Ratios of the normalized distributions are shown for between the samples with coincident masses. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_VAmodels}
-\end{figure}
+\end{figure*}
 
 Figure\,\ref{fig:monojet_scan_VA_mMed1000} shows the samples generated with pure and mixed couplings for $\mDM=100$~\gev and $\mMed=1\,\tev$, i.e. where the Dark Matter pair is produced on-shell. The mediator width between the pure vector and pure axial-vector couplings differ only by 2\% in this case, and $<10\%$ agreement between the cross sections is found. The mediator widths for the samples with the same type coupling to quarks agree at better than 1\% since the width is dominated by the quark contribution, as expected from
 Eq.\,\ref{eq:monojet_min}.
@@ -177,19 +177,19 @@ between the cross-sections of the samples with pure couplings is observed. As in
 In general, the coupling to quarks is not expected to play an important role as it is only needed to produce the mediator which is confirmed by the observations above. For scalar and psuedoscalar mediators, the coupling to Dark Matter determines the form of the matrix element which explains the similarity of the samples with the same type Dark Matter couplings. 
 Based on these arguments, we recommend to consider only the models with pure vector couplings or pure axial-vector couplings.
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/compareVA_100_1000.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/compareVA_100_1000.eps}
 \caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=1$~\tev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_VA_mMed1000}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/compareVA_100_100.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/compareVA_100_100.eps}
 \caption{Comparison of the pure vector, V-V, and pure axial-vector, A-A, couplings with mixed couplings, A-V and V-A where the first (second) letter indicates the Standard Model (Dark Sector) vertex. The $\MET$ distribution is shown for the samples generated with $\mDM=100$~\gev and $\mMed=100$~\gev. Ratios of the normalized distributions are shown for A-V over V-V and for V-A over A-A. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_VA_mMed100}
-\end{figure}
+\end{figure*}
 %%% end of the new section by DS
 
 
@@ -211,12 +211,12 @@ nor for the off-shell Dark Matter production where $\mMed<2\mDM$. Only the produ
 Differences in kinematic distributions are expected only close to the transition region where both on-shell and off-shell decays occur.
 %TODO clarify slide 9 and 10 in https://indico.cern.ch/event/389275/contribution/1/material/slides/0.pdf
 %TODO check explicitly for V and A (generate corresponding samples)
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_V_10_1000.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_V_10_1000.eps}
 \caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_g}
-\end{figure}
+\end{figure*}
 
 %When small coupling strengths are combined with extremely heavy mediators, one must take particular care to integrate over all values of the dark matter pair invariant mass, down to the lowest values for which the \MET satisfies threshold requirements. See the Appendix \ref{sec:monojet_implementation} page \pageref{thought:heavynarrowmediators} for details.
 
@@ -245,22 +245,22 @@ In case of narrow width mediators, e.g. $\Gamma_{\rm{min}}/\mMed\sim0.05$, even 
 
 %\begin{figure}
 %\centering
-%\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_V_10_5000.eps}
+%\includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_V_10_5000.eps}
 %\caption{Scan over couplings. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 %\label{fig:monojet_narrow}
 %\end{figure}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_EFT_10_5000.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_EFT_10_5000.eps}
 \caption{Comparison of the $\MET$ distributions from the D5 EFT sample and the vector models with 5~\tev heavy mediator of various widths. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_narrow}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
 \subfloat[]{
-\includegraphics[width=0.45\textwidth]{figures/monojet/mxx.eps}
+\includegraphics[width=0.73\textwidth]{figures/monojet/mxx.eps}% width = 0.73 => regular textwidth of figure environment. figure* used to avoid overlapping captions.
 \label{fig:monojet_mchichi_a}}
 \hfill
 \subfloat[]{
@@ -298,19 +298,19 @@ For a fixed mediator mass \mMed and couplings, the Dark Matter mass falls into t
 \item[Off-shell:] When $\Mmed ll 2 \mDM$, the Dark Matter pair is produced off-shell. The mediator propagator gives an explicit suppression of $(\Mmed/Q)^4$ that suppresses hard ISR. The $\mDM=1$~\tev case, shown in Fig.~\ref{fig:monojet_scan_V_mDM1000}, and Figure\,\ref{fig:monojet_scan_V_mDM100} demonstrates that the \MET spectrum hardens with increasing \mDM, accompanied by the gradual decrease of the cross section. Due to the significant cross section suppression, it is not necessary to fully populate the parameter space. Imminent LHC searches are not expected to be sensitive to these signals.
 \end{itemize}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mDM_V_1000.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mDM_V_1000.eps}
 \caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mDM1000}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mDM_V_100.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mDM_V_100.eps}
 \caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mDM100}
-\end{figure}
+\end{figure*}
 
 \paragraph{Scan over the mediator mass}
 
@@ -318,19 +318,19 @@ Changing the mediator mass for fixed Dark Matter mass and couplings leads to sig
 On the other hand, the $\MET$ shapes are similar in the off-shell Dark Matter production regime.  This
 is illustrated in Fig.\,\ref{fig:monojet_scan_V_mMed1000}. Therefore, a coarse binning in \mMed is sufficient in the off-shell regime.
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mMed_V_10.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mMed_V_10.eps}
 \caption{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mMed10}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mMed_V_1000.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mMed_V_1000.eps}
 \caption{Scan over mediator mass. The $\MET$ distribution is compared for the vector mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_V_mMed1000}
-\end{figure}
+\end{figure*}
 
 \paragraph{Proposed parameter grid}
 
@@ -356,8 +356,8 @@ One point at very high mediator mass (10~\tev) is added for each of the DM masse
 
 % \begin{figure}
 % \centering
-% \includegraphics[width=0.45\textwidth]{figures/monojet/grid_V.eps}
-% \includegraphics[width=0.45\textwidth]{figures/monojet/grid_A.eps}
+% \includegraphics[width=0.95\textwidth]{figures/monojet/grid_V.eps}
+% \includegraphics[width=0.95\textwidth]{figures/monojet/grid_A.eps}
 % \caption{Proposed parameter grid for vector and axial-vector mediator in the $\mMed$--$\mDM$ plane.}
 % \label{fig:monojet_grid_V}
 % \end{figure}
@@ -619,8 +619,8 @@ For the mediator mass above twice the top quark mass $m_t$, the minimal width re
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{figures/monojet/width_S.eps}
-\includegraphics[width=0.45\textwidth]{figures/monojet/width_P.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/width_S.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/width_P.eps}
 \caption{Minimal width as a function of mediator mass for scalar and pseudo-scalar mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of \mDM=10~\gev, 30~\gev, 100~\gev and 300~\gev in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted beige line shows the contribution from the coupling to gluons. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
 \label{fig:monojet_width_S}
 \end{figure}
@@ -634,13 +634,13 @@ same kinematics, although it is worth noting that the pseudo-scalar model has be
 and of the galactic center excess~\cite{Arina:2014yna}.
 Like in the case of the vector and axial-vector models described in Section~\ref{sec:monojet_spin}, the differences between the cross sections for the scalar and pseudo-scalar samples with the same $\mDM$ and $\mMed$ are increasing with the Dark Matter mass for fixed mediator mass. The pseudo-scalar model gives larger cross sections. Also note the increasing differences between the minimal widths close to the $2\mDM=\mMed$ threshold.
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[width=0.9\textwidth]{figures/monojet/compareModels_SP_300.eps}
+	\includegraphics[width=0.95\textwidth]{figures/monojet/compareModels_SP_300.eps}
 	\caption{Comparison of the $\MET$ distributions for the scalar and pseudoscalar models for different $\mMed=300\,\gev$ and different Dark Matter masses. 
 	Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 	\label{fig:monojet_SPmodels}
-\end{figure}
+\end{figure*}
 
 
 
@@ -656,40 +656,40 @@ in order to decide on the optimized parameter grid for the presentation of Run-2
 A scan over the mediator mass is shown in Fig.\,\ref{fig:monojet_scan_S_mMed1000} where \mMed = 300~\gev and 500~\gev are chosen to be below and above $2m_t$. The off-shell Dark Matter production regime is assumed by taking an extreme limit ($\mDM=1$~\tev) in order to study solely the effects of the couplings to quarks. 
 No differences in the kinematic distributions are observed and also the cross sections remain similar in this case. No significant changes appear for mediator masses around the $2m_t$ threshold.
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_g_S_10_500.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_g_S_10_500.eps}
 \caption{Scan over couplings. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_S_g}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mDM_S_500.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mDM_S_500.eps}
 \caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_S_mDM1000}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mDM_S_100.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mDM_S_100.eps}
 \caption{Scan over Dark Matter mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_S_mDM100}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mMed_S_10.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mMed_S_10.eps}
 \caption{Scan over mediator mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_S_mMed10}
-\end{figure}
+\end{figure*}
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.9\textwidth]{figures/monojet/scan_mMed_S_1000.eps}
+\includegraphics[width=0.95\textwidth]{figures/monojet/scan_mMed_S_1000.eps}
 \caption{Scan over mediator mass. The $\MET$ distribution is compared for the scalar mediator models using the parameters as indicated. Ratios of the normalized distributions with respect to the first one are shown. $A_{300}$ and $A_{500}$ in the table denote the acceptance of the $\MET>300$~\gev and $\MET>500$~\gev cut, respectively.}
 \label{fig:monojet_scan_S_mMed1000}
-\end{figure}
+\end{figure*}
 
 
 The optimized parameter grid in the $\mMed$--$\mDM$ plane for scalar and pseudo-scalar mediators is motivated by similar arguments as in the previous section. Therefore, a similar pattern is followed here, taking again $\gq=0.25$ and $\gDM=1$. Only the sensitivity to the highest mediator masses has to be re-evaluated.
@@ -727,8 +727,8 @@ decaying to Dirac DM fermions in the scalar and pseudoscalar case, taking the mi
 
 % \begin{figure}
 % \centering
-% \includegraphics[width=0.45\textwidth]{figures/monojet/grid_S.eps}
-% \includegraphics[width=0.45\textwidth]{figures/monojet/grid_P.eps}
+% \includegraphics[width=0.95\textwidth]{figures/monojet/grid_S.eps}
+% \includegraphics[width=0.95\textwidth]{figures/monojet/grid_P.eps}
 % \caption{Proposed parameter grid for scalar and pseudo-scalar mediator in the $\mMed$--$\mDM$ plane.}
 % \label{fig:monojet_grid_S}
 % \end{figure}
@@ -848,24 +848,24 @@ The limiting case $\Gamma_{\rm{min}}=\mMed$ defines the upper values of the coup
 For vector and axial-vector mediators, the minimal width is predominantly defined by $\gq$ due to the number of quark flavors and the color factor. %In this case, the scaling follows from Eq.\,\ref{eq:monojet_gDM}.
 On the contrary, both the Standard Model and Dark Matter partial width have comparable contributions in case of scalar and pseudo-scalar mediators if the top quark channel is open ($\mMed>2m_t$). However, mostly $\gDM$ defines the minimal width for $\mMed<2m_t$ due to the Yukawa-suppressed light quark couplings.
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}\\
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
+	\includegraphics[width=0.49\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
+	\includegraphics[width=0.49\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}\\
+	\includegraphics[width=0.49\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
+	\includegraphics[width=0.49\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
 	\caption{Minimal width over the mediator mass for vector (top) and scalar (bottom) mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev (left) and $\mMed=1$~\tev (right). $\mDM=10$~\gev is considered in all cases.
 %		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.
 		Only the cases with $\Gamma_{\rm{min}}<\mMed$ are shown.}
 	\label{fig:monojet_width}
-\end{figure}
+\end{figure*}
 
 %\begin{figure}
 %	\centering
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg100.eps}\\
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg100.eps}
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_V_gg100.eps}
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_A_gg100.eps}\\
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_S_gg100.eps}
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_P_gg100.eps}
 %	\caption{Minimal width over the mediator mass for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=100$~\gev and $\mDM=10$~\gev.
 %		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
 %	\label{fig:monojet_width100}
@@ -873,10 +873,10 @@ On the contrary, both the Standard Model and Dark Matter partial width have comp
 %
 %\begin{figure}
 %	\centering
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_A_gg1000.eps}\\
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
-%	\includegraphics[width=0.45\textwidth]{figures/monojet/constantwidth_P_gg1000.eps}
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_V_gg1000.eps}
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_A_gg1000.eps}\\
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_S_gg1000.eps}
+%	\includegraphics[width=0.95\textwidth]{figures/monojet/constantwidth_P_gg1000.eps}
 %	\caption{Minimal width over the mediator mass for vector, axial-vector, scalar and pseudo-scalar mediators as a function of the individual couplings $\gq$ and $\gDM$, assuming $\mMed=1$~\tev and $\mDM=10$~\gev.
 %		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by the black line.} 
 %	\label{fig:monojet_width1000}
@@ -895,10 +895,10 @@ Constant colors indicate the lines along which the cross section scaling works p
 
 \begin{figure}
 	\centering
-	%\includegraphics[width=0.45\textwidth]{figures/monojet/scaling_V_10_100.eps}
-	%\includegraphics[width=0.45\textwidth]{figures/monojet/scaling_V_10_1000.eps}\\
-	\includegraphics[width=0.45\textwidth]{figures/monojet/scaling_S_10_100.eps}
-	\includegraphics[width=0.45\textwidth]{figures/monojet/scaling_S_10_1000.eps}\\
+	%\includegraphics[width=0.95\textwidth]{figures/monojet/scaling_V_10_100.eps}
+	%\includegraphics[width=0.95\textwidth]{figures/monojet/scaling_V_10_1000.eps}\\
+	\includegraphics[width=0.95\textwidth]{figures/monojet/scaling_S_10_100.eps}
+	\includegraphics[width=0.95\textwidth]{figures/monojet/scaling_S_10_1000.eps}\\
 	\caption{Ratio of the rescaled and generated cross sections in the $\gq$--$\gDM$ plane. The point at $\gq=\gDM=1$, taken as a reference for the rescaling, is denoted by a star symbol.
 		Scalar model with $\mMed=100$~\gev (left) and 1~\tev (right) is plotted for $\mDM=10$~\gev.
 		The limiting case $\Gamma_{\rm{min}}=\mMed$ is indicated by a black line and no results are shown beyond.}
@@ -907,15 +907,15 @@ Constant colors indicate the lines along which the cross section scaling works p
 \end{figure}
 
 %The plots are produced with M_S = 300~\gev, m_chi = 100~\gev, \gSM = \gDM =4
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[page=1, trim=310 200 310 200, clip, width=0.3\textwidth]{figures/monojet/rescalingexercise.pdf}
-	\includegraphics[page=2, trim=305 195 305 195, clip, width=0.3\textwidth]{figures/monojet/rescalingexercise.pdf}
-	\includegraphics[page=3, trim=300 190 300 190, clip, width=0.3\textwidth]{figures/monojet/rescalingexercise.pdf}
+	\includegraphics[page=1, trim=310 200 310 200, clip, width=0.49\textwidth]{figures/monojet/rescalingexercise.pdf}
+	\includegraphics[page=2, trim=305 195 305 195, clip, width=0.49\textwidth]{figures/monojet/rescalingexercise.pdf}\\
+	\includegraphics[page=3, trim=300 190 300 190, clip, width=0.49\textwidth]{figures/monojet/rescalingexercise.pdf}
 	\caption{Scaling along the lines of constant width. The line of constant width for $\mMed=300$~\gev and $\mDM=100$~\gev, intercepting $\gq=\gDM=4$ is shown on left. The generated and rescaled cross sections are compared in the middle, the corresponding ratio is shown on right.}
 	%TODO ask Uli for the color code
 	\label{fig:monojet_scaling_constwidth}
-\end{figure}
+\end{figure*}
 
 
 \subsection{Proposed parameter grid for cross-section scaling}
@@ -979,7 +979,7 @@ We also choose to provide instead a table of cross section times branching ratio
 
 \begin{figure}[!ht]
 	\begin{center}
-		\includegraphics[width=0.7\textwidth]{figures/ttbar/xVSwom_mphi_400_mchi_1_proc_S.png}
+		\includegraphics[width=0.95\textwidth]{figures/ttbar/xVSwom_mphi_400_mchi_1_proc_S.png}
 		\vspace{2mm}
 		\caption{\label{fig:xsec_scaling} An example comparing a simple cross section scaling versus the computation from the \madgraph generator, for a scalar $t \bar{t}$+\MET model with $m_{\phi}=400\,{\rm GeV}$, $\mdm=1\,{\rm GeV}$ and all couplings set to unity. In this example, the scaling relationship holds for $\Gamma_{\phi}/m_{\phi}$ below $0.2$, beyond which finite width effects become important and the simple scaling breaks down.}
 	\end{center}
