--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -47,31 +47,17 @@ A scan of Dark Matter and mediator masses should be done in the on-shell region 
 % Therefore, the coupling scan is chosen as a discrete set of values $g=0.5,1,2,3$ for each mass point.
 %~\Todo{Are we sure the models in SVN have minimal width? What is the max coupling so that the width is still lower than the mass?}
 
-\begin{figure}[h!]
-    \begin{minipage}{0.49\textwidth}
-      \centering 
-      \includegraphics[scale=0.32]{figures/bFDM/bfdm_relic/missing_et.eps}
-    \end{minipage}
-    \hfill
-    \begin{minipage}{0.49\textwidth}
-      \centering 
-      \includegraphics[scale=0.32]{figures/bFDM/bfdm_relic/Njets.eps}
-    \end{minipage}
-    \caption{\MET (left) and jet multiplicity (right) for various DM and mediator masses and couplings normalized to the relic density observed in the early universe. \label{fig:relic}}
-\end{figure}
+\begin{figure*}[h!]
+  \includegraphics[width=0.49\textwidth]{figures/bFDM/bfdm_relic/missing_et.eps}\quad
+  \includegraphics[width=0.49\textwidth]{figures/bFDM/bfdm_relic/Njets.eps}
+  \caption{\MET (left) and jet multiplicity (right) for various DM and mediator masses and couplings normalized to the relic density observed in the early universe.}\label{fig:relic}
+\end{figure*}
 
-\begin{figure}[h!]
-    \begin{minipage}{0.49\textwidth}
-      \centering 
-      \includegraphics[scale=0.32]{figures/bFDM/bfdm_35_500/missing_et.eps}
-    \end{minipage}
-    \hfill
-    \begin{minipage}{0.49\textwidth}
-      \centering 
-      \includegraphics[scale=0.32]{figures/bFDM/bfdm_35_500/Njets.eps}
-    \end{minipage}
-    \caption{\MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$ \label{fig:g_comp}}
-\end{figure}
+\begin{figure*}[h!]
+  \includegraphics[width=0.49\textwidth]{figures/bFDM/bfdm_35_500/missing_et.eps}\quad
+  \includegraphics[width=0.49\textwidth]{figures/bFDM/bfdm_35_500/Njets.eps}
+  \caption{\MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$} \label{fig:g_comp}
+\end{figure*}
 
 %The following benchmark points could be produced as a starting point for the parameter space for this model:
 %
