--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -121,28 +121,28 @@ shown in Fig.~\ref{fig:DMV_EW_kinematics_SVMed}.
 Leading-order cross-sections for the chosen 
 benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
-\begin{figure}[h!]
+\begin{figure*}[h!]
 \centering  
 \subfloat[Missing transverse momentum distribution for the photon+\MET final state, for 
 different mediator mass choices, for \mdm=10~\gev.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
-\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
+\includegraphics[width=0.49\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
 }%TODO: add this + equivalent plot of \MET to appendix
 \hfill
 \subfloat[Leading photon transverse momentum distribution for the photon+\MET final state, 
 for different DM mass choices, with \mMed=1~\tev.\label{fig:DMV_EW_gamma_pT_SVMed}]{%
-		\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_mV1000GeV}
+		\includegraphics[width=0.49\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_mV1000GeV}
 }%TODO: add equivalent plot of \MET to appendix
 \hfill
 \subfloat[Missing transverse momentum distribution for the leptonic Z+\MET final state, 
 for different mediator mass choices, for \mdm=15~\gev\label{fig:DMV_EW_Z_MET_SVMed}]{%
-\includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
+\includegraphics[width=0.49\textwidth]{figures/EW/pt_vv_Mx15}
 }    
 \hfill
 \subfloat[Missing transverse momentum distribution for the hadronic W+\MET final state.\label{fig:DMV_EW_Whad_MET_SVMed}]{%
-	\includegraphics[width=0.5\textwidth]{figures/EW/monoWhad_Destructive/metPt}
+	\includegraphics[width=0.49\textwidth]{figures/EW/monoWhad_Destructive/metPt}
 }    
 \caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
 for the simplified model
        with a vector mediator exchanged in the \schannel.}
 \label{fig:DMV_EW_kinematics_SVMed}
-\end{figure}
+\end{figure*}
